--- a/BookNGo/BookNGo.csproj
+++ b/BookNGo/BookNGo.csproj
@@ -183,10 +183,15 @@
     <Compile Include="Migrations\201904181351422_mig1.Designer.cs">
       <DependentUpon>201904181351422_mig1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904211251241_mig2.cs" />
+    <Compile Include="Migrations\201904211251241_mig2.Designer.cs">
+      <DependentUpon>201904211251241_mig2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BookNGoContext.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Availability.cs" />
     <Compile Include="Models\Feature.cs" />
     <Compile Include="Models\House.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -194,7 +199,6 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Reservation.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="Models\UserType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -232,7 +236,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
@@ -274,6 +277,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201904181351422_mig1.resx">
       <DependentUpon>201904181351422_mig1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904211251241_mig2.resx">
+      <DependentUpon>201904211251241_mig2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
