--- a/BookNGo/BookNGo.csproj
+++ b/BookNGo/BookNGo.csproj
@@ -187,13 +187,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201905042250259_mig1.cs" />
-    <Compile Include="Migrations\201905042250259_mig1.Designer.cs">
-      <DependentUpon>201905042250259_mig1.cs</DependentUpon>
+    <Compile Include="Migrations\201905042324110_mig1.cs" />
+    <Compile Include="Migrations\201905042324110_mig1.Designer.cs">
+      <DependentUpon>201905042324110_mig1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201905042256431_mig2.cs" />
-    <Compile Include="Migrations\201905042256431_mig2.Designer.cs">
-      <DependentUpon>201905042256431_mig2.cs</DependentUpon>
+    <Compile Include="Migrations\201905042333595_mig2.cs" />
+    <Compile Include="Migrations\201905042333595_mig2.Designer.cs">
+      <DependentUpon>201905042333595_mig2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905050004316_mig3.cs" />
+    <Compile Include="Migrations\201905050004316_mig3.Designer.cs">
+      <DependentUpon>201905050004316_mig3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905050005473_mig31.cs" />
+    <Compile Include="Migrations\201905050005473_mig31.Designer.cs">
+      <DependentUpon>201905050005473_mig31.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -404,11 +412,6 @@
     <Content Include="Views\Manage\ManageLogins.cshtml" />
     <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
-    <Content Include="Views\Reservations\Create.cshtml" />
-    <Content Include="Views\Reservations\Delete.cshtml" />
-    <Content Include="Views\Reservations\Details.cshtml" />
-    <Content Include="Views\Reservations\Edit.cshtml" />
-    <Content Include="Views\Reservations\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -432,6 +435,12 @@
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
+    <Content Include="Views\Reservations\BookIt.cshtml" />
+    <Content Include="Views\Reservations\Delete.cshtml" />
+    <Content Include="Views\Reservations\Details.cshtml" />
+    <Content Include="Views\Reservations\Edit.cshtml" />
+    <Content Include="Views\Reservations\Index.cshtml" />
+    <Content Include="Views\Houses\MyHouses.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -449,11 +458,17 @@
     <TypeScriptCompile Include="Scripts\index.d.ts" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201905042250259_mig1.resx">
-      <DependentUpon>201905042250259_mig1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201905042324110_mig1.resx">
+      <DependentUpon>201905042324110_mig1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201905042256431_mig2.resx">
-      <DependentUpon>201905042256431_mig2.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201905042333595_mig2.resx">
+      <DependentUpon>201905042333595_mig2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905050004316_mig3.resx">
+      <DependentUpon>201905050004316_mig3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905050005473_mig31.resx">
+      <DependentUpon>201905050005473_mig31.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
