fix MyHouses and MyReservations

--- a/BookNGo/BookNGo.csproj
+++ b/BookNGo/BookNGo.csproj
@@ -191,6 +191,10 @@
     <Compile Include="Migrations\201905050633101_mig1.Designer.cs">
       <DependentUpon>201905050633101_mig1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905071031421_mig2.cs" />
+    <Compile Include="Migrations\201905071031421_mig2.Designer.cs">
+      <DependentUpon>201905071031421_mig2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Availability.cs" />
@@ -449,6 +453,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201905050633101_mig1.resx">
       <DependentUpon>201905050633101_mig1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905071031421_mig2.resx">
+      <DependentUpon>201905071031421_mig2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
