--- a/BookNGo/BookNGo.csproj
+++ b/BookNGo/BookNGo.csproj
@@ -174,7 +174,6 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\AvailabilitiesController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\FeaturesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -195,9 +194,12 @@
     <Compile Include="Migrations\201905071031421_mig2.Designer.cs">
       <DependentUpon>201905071031421_mig2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905071313238_mig3.cs" />
+    <Compile Include="Migrations\201905071313238_mig3.Designer.cs">
+      <DependentUpon>201905071313238_mig3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\Availability.cs" />
     <Compile Include="Models\BookNGoContext.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Feature.cs" />
@@ -374,11 +376,6 @@
     <Content Include="Views\Account\SendCode.cshtml" />
     <Content Include="Views\Account\VerifyCode.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Views\Availabilities\Create.cshtml" />
-    <Content Include="Views\Availabilities\Delete.cshtml" />
-    <Content Include="Views\Availabilities\Details.cshtml" />
-    <Content Include="Views\Availabilities\Edit.cshtml" />
-    <Content Include="Views\Availabilities\Index.cshtml" />
     <Content Include="Views\Categories\Create.cshtml" />
     <Content Include="Views\Categories\Details.cshtml" />
     <Content Include="Views\Categories\Edit.cshtml" />
@@ -456,6 +453,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905071031421_mig2.resx">
       <DependentUpon>201905071031421_mig2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905071313238_mig3.resx">
+      <DependentUpon>201905071313238_mig3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
