--- a/BookNGo/BookNGo.csproj
+++ b/BookNGo/BookNGo.csproj
@@ -185,9 +185,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201905100631361_mig1.cs" />
-    <Compile Include="Migrations\201905100631361_mig1.Designer.cs">
-      <DependentUpon>201905100631361_mig1.cs</DependentUpon>
+    <Compile Include="Migrations\201905101444372_mig1.cs" />
+    <Compile Include="Migrations\201905101444372_mig1.Designer.cs">
+      <DependentUpon>201905101444372_mig1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -201,6 +201,7 @@
     <Compile Include="Models\Reservation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\HouseModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -287,10 +288,6 @@
     <Content Include="Views\Categories\Details.cshtml" />
     <Content Include="Views\Categories\Edit.cshtml" />
     <Content Include="Views\Categories\Index.cshtml" />
-    <Content Include="Views\Features\Create.cshtml" />
-    <Content Include="Views\Features\Details.cshtml" />
-    <Content Include="Views\Features\Edit.cshtml" />
-    <Content Include="Views\Features\Index.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Locations\Create.cshtml" />
     <Content Include="Views\Locations\Details.cshtml" />
@@ -333,10 +330,14 @@
     <Content Include="Views\Reservations\MyReservations.cshtml" />
     <Content Include="Views\Home\AdminPage.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Features\Index.cshtml" />
+    <Content Include="Views\Features\Details.cshtml" />
+    <Content Include="Views\Features\Create.cshtml" />
+    <Content Include="Views\Features\Edit.cshtml" />
+    <Content Include="Views\Features\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -350,8 +351,8 @@
     <TypeScriptCompile Include="Scripts\index.d.ts" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201905100631361_mig1.resx">
-      <DependentUpon>201905100631361_mig1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201905101444372_mig1.resx">
+      <DependentUpon>201905101444372_mig1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
