--- a/BookNGo/BookNGo.csproj
+++ b/BookNGo/BookNGo.csproj
@@ -345,6 +345,7 @@
     <Content Include="Views\Home\AdminPage.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Reservations\MyHouseReservations.cshtml" />
+    <Content Include="Views\Reservations\MyOldReservations.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
