--- a/BookNGo/BookNGo.csproj
+++ b/BookNGo/BookNGo.csproj
@@ -344,7 +344,7 @@
     <Content Include="Views\Reservations\MyReservations.cshtml" />
     <Content Include="Views\Home\AdminPage.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Reservations\MyHouseReservations.cshtml" />
+    <Content Include="Views\Reservations\MyHousesReservations.cshtml" />
     <Content Include="Views\Reservations\MyOldReservations.cshtml" />
   </ItemGroup>
   <ItemGroup>
