change names and links + up photo

--- a/BookNGo/BookNGo.csproj
+++ b/BookNGo/BookNGo.csproj
@@ -185,13 +185,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201905110819176_mig1.cs" />
-    <Compile Include="Migrations\201905110819176_mig1.Designer.cs">
-      <DependentUpon>201905110819176_mig1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201905121216593_mig2.cs" />
-    <Compile Include="Migrations\201905121216593_mig2.Designer.cs">
-      <DependentUpon>201905121216593_mig2.cs</DependentUpon>
+    <Compile Include="Migrations\201905150512401_Version_1.cs" />
+    <Compile Include="Migrations\201905150512401_Version_1.Designer.cs">
+      <DependentUpon>201905150512401_Version_1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -206,7 +202,6 @@
     <Compile Include="Models\Reservation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\HouseImage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -349,6 +344,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="Views\Roles\" />
   </ItemGroup>
   <ItemGroup>
@@ -363,11 +359,8 @@
     <TypeScriptCompile Include="Scripts\index.d.ts" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201905110819176_mig1.resx">
-      <DependentUpon>201905110819176_mig1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201905121216593_mig2.resx">
-      <DependentUpon>201905121216593_mig2.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201905150512401_Version_1.resx">
+      <DependentUpon>201905150512401_Version_1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
