--- a/BookNGo/Web.config
+++ b/BookNGo/Web.config
@@ -26,6 +26,7 @@
       </system.Web>
   -->
   <system.web>
+    <customErrors mode="Off"/>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.6.1" />
